[package]
name = "qsp-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.95", features = ["proc-macro"] }
quote = { version = "1.0.40", features = ["proc-macro"] }
syn = { version = "2.0.104", features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
